--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -1,16 +1,43 @@
-.container
-  .well.well-trans.splash
-    .top
-    .center
-      .row
-        .span6.splash-text
-          %p Josh is all about enthusiasm. We believe that "Programming is an Art". Working with rails is our passion. 
-          %p We deliver world class software using Ruby on Rails in various industry verticals like BFSI, Manufacturing, Media, eCommerce, Social Sector and Information Technology. Our expertize lies in core application development, scalability and performance tuning. We are passionate about open source and contribute extensively in the form of ruby gems and rails plugins.
-          %p We are located in India and our offshore development services provide Cost Effective State of the Art Rails Development. We partner with Rackspace and Engine Yard to provide excellent Rails hosting.
-        .span5.splash-gem
-          %img{:src => "images/gem.png"}
-    .bottom
-  
+.well.well-trans.splash
+  .top
+  .center
+    .row
+      .span6.splash-text
+        %p Josh is all about enthusiasm. We believe that "Programming is an Art". Working with rails is our passion. 
+        %p We deliver world class software using Ruby on Rails in various industry verticals like BFSI, Manufacturing, Media, eCommerce, Social Sector and Information Technology. Our expertize lies in core application development, scalability and performance tuning. We are passionate about open source and contribute extensively in the form of ruby gems and rails plugins.
+        %p We are located in India and our offshore development services provide Cost Effective State of the Art Rails Development. We partner with Rackspace and Engine Yard to provide excellent Rails hosting.
+      .span5.splash-gem
+        %img{:src => "images/gem.png"}
+  .bottom
+.row
+  .span
+    .well.well-home-callout.first
+      .top
+      .center
+        %h3
+          Ruby on Rails
+        .graphic.pull-right
+          %img{:src => "images/rails_logo.png"}
+        %p Working with Rails has been a passion and a pleasure. We have been working in different areas related to Rails - Edge Rails, Rails3, Facebook Applications. We have even undertaken some 'Rescue Missions' where we go in and save the day! Our latest efforts have been towards RhoMobile and Clojure. 
+      
+  .span
+    .well.well-home-callout
+      .top
+      .center
+        %h3
+          E-Josh
+        .graphic.pull-right
+          %img{:src => "images/e-josh_logo.png"}
+        %p Developing a website and maintaining it has never been easy for any company, especially one which is not in the IT sector. Welcome to automated website management !
+  .span
+    .well.well-home-callout
+      .top
+      .center
+        %h3
+          Splat
+        .graphic.pull-right
+          %img{:src => "images/splat_logo.png"}
+        %p A Ruby gem initiated and developed by Josh Software for SMS platform. It acts as a platform for different SMS service providers so that the user/developers don’t need to worry about different type of formats. In the recently concluded LSRC 2010 the director Mr. Gautam Rege presented and got a wonderful response.
 
 
 
