--- a/app/views/static/portfolio.html.haml
+++ b/app/views/static/portfolio.html.haml
@@ -1,41 +1,131 @@
 .row
-	.span2
-		#sticker
-			.well
-				%p this 
-				%p is 
-				%p some 
-				%p cotent 
-				%p for 
-				%p the 
-				%p sticky
-	.span10
-		.well
-			%p this 
-			%p is 
-			%p some 
-			%p cotent 
-			%p for 
-			%p the 
-			%p well
-			%p this 
-			%p is 
-			%p some 
-			%p cotent 
-			%p for 
-			%p the 
-			%p well
-			%p this 
-			%p is 
-			%p some 
-			%p cotent 
-			%p for 
-			%p the 
-			%p well
-			%p this 
-			%p is 
-			%p some 
-			%p cotent 
-			%p for 
-			%p the 
-			%p well
+  .span3.portfolio-menu
+    #sticker
+      .well-trans
+        .top
+        .center
+          %ul
+            %li
+              %a{:href => "#header"}The Deal Pages
+            %li
+              %a{:href => "#clear-trip"}Cleartrip Hotels
+            %li
+              %a{:href => "#brand-potion"}Brand Potion
+            %li
+              %a{:href => "#brand-potion2"}Brand Potion 2
+            %li
+              %a{:href => "#brand-potion3"}Brand Potion 3
+            %li
+              %a{:href => "#brand-potion4"}Brand Potion 4
+            %li
+              %a{:href => "#brand-potion5"}Brand Potion 5
+            %li
+              %a{:href => "#brand-potion6"}Brand Potion 6
+          .top-link
+            %a{:href => "#header"} Top
+        .bottom
+  .span9
+    #the-deal-pages.well-trans.portfolio-site
+      .top
+      .center
+        .screenshot.pull-left
+          %img{:src => "images/porfolio/joshsoftware_deal-pages.png"}
+        .site-info
+          %a.site-title{:href => "http://thedealpages.com", :target => "_blank"}TheDealPages.com
+          %p.site-description
+            Is your one-stop directory for all the best daily deals in your city. Browse hundreds of limited time offers to purchase great deals from local business for 40-90% off!
+          %ul.unstyled.geek-specs
+            %li
+              %b Stack:
+              Rails 3.0.7, thin
+            %li
+              %b Deployment:
+              Heroku
+      .bottom
+    #clear-trip.well-trans.portfolio-site
+      .top
+      .center
+        .screenshot.pull-left
+          %img{:src => "images/porfolio/joshsoftware_clear-trip.png"}
+        .site-info
+          %a.site-title{:href => "http://hotelbooking.cleartrip.com/hotels/india/mumbai", :target => "_blank"}Cleartrip.com
+          %p.site-description
+            This is a hotel directory listing for Cleartrip. Very heavy caching enables hotels search very fast and reliable. This page is used in A/B testing for Cleartrip. Localities are mapped and nearby hotels are cached via XML api access using Cleartrip APIs. Hosting this directly on an EC2 instance provides flexibility to cache it entirely.
+          %ul.unstyled.geek-specs
+            %li
+              %b Stack:
+              Rails 3.0.7, Memcached, nginx + passgenger
+            %li
+              %b Hosting:
+              Amazon EC2
+      .bottom
+    #brand-potion.well-trans.portfolio-site
+      .top
+      .center
+        .screenshot.pull-left
+          %img{:src => "images/porfolio/joshsoftware_brand-potion.png"}
+        .site-info
+          %a.site-title{:href => "http://brandpotion.com", :target => "_blank"}BrandPotion.com
+          %p.site-description
+            Along with the domain expertize of H-Farm and Zooppa from Italy, Josh was involved in the complete development of BrandPotion. BrandPotion takes networking beyond the social realm - we call this Brand networking!
+          %ul.unstyled.geek-specs
+            %li
+              %b Technologies:
+              Ruby On Rails
+      .bottom
+    #brand-potion2.well-trans.portfolio-site
+      .top
+      .center
+        .screenshot.pull-left
+          %img{:src => "images/porfolio/joshsoftware_brand-potion.png"}
+        .site-info
+          %a.site-title{:href => "http://brandpotion.com", :target => "_blank"}BrandPotion.com
+          %p.site-description
+            Along with the domain expertize of H-Farm and Zooppa from Italy, Josh was involved in the complete development of BrandPotion. BrandPotion takes networking beyond the social realm - we call this Brand networking!
+          %ul.unstyled.geek-specs
+            %li
+              %b Technologies:
+              Ruby On Rails
+      .bottom
+    #brand-potion3.well-trans.portfolio-site
+      .top
+      .center
+        .screenshot.pull-left
+          %img{:src => "images/porfolio/joshsoftware_brand-potion.png"}
+        .site-info
+          %a.site-title{:href => "http://brandpotion.com", :target => "_blank"}BrandPotion.com
+          %p.site-description
+            Along with the domain expertize of H-Farm and Zooppa from Italy, Josh was involved in the complete development of BrandPotion. BrandPotion takes networking beyond the social realm - we call this Brand networking!
+          %ul.unstyled.geek-specs
+            %li
+              %b Technologies:
+              Ruby On Rails
+      .bottom
+    #brand-potion4.well-trans.portfolio-site
+      .top
+      .center
+        .screenshot.pull-left
+          %img{:src => "images/porfolio/joshsoftware_brand-potion.png"}
+        .site-info
+          %a.site-title{:href => "http://brandpotion.com", :target => "_blank"}BrandPotion.com
+          %p.site-description
+            Along with the domain expertize of H-Farm and Zooppa from Italy, Josh was involved in the complete development of BrandPotion. BrandPotion takes networking beyond the social realm - we call this Brand networking!
+          %ul.unstyled.geek-specs
+            %li
+              %b Technologies:
+              Ruby On Rails
+      .bottom
+    #brand-potion5.well-trans.portfolio-site
+      .top
+      .center
+        .screenshot.pull-left
+          %img{:src => "images/porfolio/joshsoftware_brand-potion.png"}
+        .site-info
+          %a.site-title{:href => "http://brandpotion.com", :target => "_blank"}BrandPotion.com
+          %p.site-description
+            Along with the domain expertize of H-Farm and Zooppa from Italy, Josh was involved in the complete development of BrandPotion. BrandPotion takes networking beyond the social realm - we call this Brand networking!
+          %ul.unstyled.geek-specs
+            %li
+              %b Technologies:
+              Ruby On Rails
+      .bottom
