--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,10 +13,10 @@
           %a{:href => "/"} Josh Software Pvt. Ltd
         .main-menu
           %ul.nav.nav-pills
+            / %li
+            /   %a{:href => "#"} technology
             %li
-              %a{:href => "#"} technology
-            %li
-              %a{:href => "#"} portfolio
+              %a{:href => "portfolio.html"} portfolio
             %li
               %a{:href => "team.html"} team
             %li
