--- a/app/views/static/portfolio.html.haml
+++ b/app/views/static/portfolio.html.haml
@@ -129,3 +129,17 @@
               %b Technologies:
               Ruby On Rails
       .bottom
+    #brand-potion6.well-trans.portfolio-site
+      .top
+      .center
+        .screenshot.pull-left
+          %img{:src => "images/porfolio/joshsoftware_brand-potion.png"}
+        .site-info
+          %a.site-title{:href => "http://brandpotion.com", :target => "_blank"}BrandPotion.com
+          %p.site-description
+            Along with the domain expertize of H-Farm and Zooppa from Italy, Josh was involved in the complete development of BrandPotion. BrandPotion takes networking beyond the social realm - we call this Brand networking!
+          %ul.unstyled.geek-specs
+            %li
+              %b Technologies:
+              Ruby On Rails
+      .bottom
