--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,8 @@
   %head
     %meta{:charset => "utf-8"}
     %title Ruby on Rails Development India  | JOSH SOFTWARE PVT. LTD.
-    = stylesheet_link_tag 'application', params[:controller]
+    = stylesheet_link_tag 'application'
+    = javascript_include_tag "application"
     /[if lt IE 9]
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   %body
@@ -13,8 +14,6 @@
           %a{:href => "/"} Josh Software Pvt. Ltd
         .main-menu
           %ul.nav.nav-pills
-            / %li
-            /   %a{:href => "#"} technology
             %li
               %a{:href => "portfolio.html"} portfolio
             %li
@@ -23,4 +22,3 @@
               %a{:href => "#"} open source
     .container
       = yield
-  = javascript_include_tag "application", params[:controller]
