--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,3 +22,6 @@
               %a{:href => "#"} open source
     .container
       = yield
+    .well.footer
+      .center
+        Copyright © 2010 Josh Software Pvt. Ltd
