--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -2,13 +2,14 @@
   .top
   .center
     .row
-      .span6.splash-text
+      .span7.splash-text
         %p Josh is all about enthusiasm. We believe that "Programming is an Art". Working with rails is our passion. 
         %p We deliver world class software using Ruby on Rails in various industry verticals like BFSI, Manufacturing, Media, eCommerce, Social Sector and Information Technology. Our expertize lies in core application development, scalability and performance tuning. We are passionate about open source and contribute extensively in the form of ruby gems and rails plugins.
         %p We are located in India and our offshore development services provide Cost Effective State of the Art Rails Development. We partner with Rackspace and Engine Yard to provide excellent Rails hosting.
-      .span5.splash-gem
+      .span4.splash-gem
         %img{:src => "images/gem.png"}
   .bottom
+.row.sepatator
 .row
   .span
     .well.well-home-callout.first
@@ -38,6 +39,4 @@
         .graphic.pull-right
           %img{:src => "images/splat_logo.png"}
         %p A Ruby gem initiated and developed by Josh Software for SMS platform. It acts as a platform for different SMS service providers so that the user/developers don’t need to worry about different type of formats. In the recently concluded LSRC 2010 the director Mr. Gautam Rege presented and got a wonderful response.
-
-
 
