--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,7 @@
               %a{:href => "#"} open source
     .container
       = yield
-    .well.footer
+      .clear-footer
+    .footer
       .center
         Copyright © 2010 Josh Software Pvt. Ltd
