--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -10,7 +10,7 @@
         %img{:src => "images/gem.png"}
   .bottom
 .row.sepatator
-.row
+.row.product-callouts
   .span
     .well.well-home-callout.first
       .top
