Changed the team content and contact detail
- Change the content for team members and view page
- Added contact detail in the home page
- Added follow twitter, facebook like and blog subscripe in the footer,
    but the alignment needs to be fixed

--- a/app/assets/stylesheets/josh.css.scss
+++ b/app/assets/stylesheets/josh.css.scss
@@ -167,6 +167,9 @@ $logo: "Josh-Software-Logo.svg";
     text-align: justify;
     line-height: 1.4em;
   }
+  p.align-left {
+    text-align: left !important;
+  }
   .graphic {
     padding:0 0 10px 15px;
   }
