--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,10 +8,21 @@
     /[if lt IE 9]
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   %body
+    //facebook javascript
+    .fb-root
+    <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+    fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     #header
       .wrap
         .logo
-          %a{:href => "/"} Josh Software Pvt. Ltd
+          %a{:href => "/"} Josh Software Pvt. Ltd.
         .main-menu
           %ul.nav.nav-pills
             %li
@@ -25,4 +36,26 @@
       .clear-footer
     .footer
       .center
-        Copyright © 2010 Josh Software Pvt. Ltd
+        Copyright © 2012 Josh Software Pvt. Ltd.
+        //twitter
+        %a{:href => "https://twitter.com/joshsoftware", :class => "twitter-follow-button", 'data-show-count' => "false", 'data-size' => "medium"}Follow @joshsoftware
+        //facebook
+        .fb-like{'data-href' => "http://www.facebook.com/joshsoftware", 'data-send' => "false", 'data-width' => "450", 'data-show-faces' => "false"}
+        //blog subscripe
+        %img{:src => 'http://www.feedburner.com/fb/images/pub/feed-icon16x16.png'}
+        %a{:href => 'http://feeds.feedburner.com/JoshSoftware'}Subscribe to blog
+        //twitter javascript
+        %script
+          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+//Google analytics
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script>
+try {
+var pageTracker = _gat._getTracker("UA-293708-3");
+pageTracker._trackPageview();
+} 
+catch(err) {}
+</script>
