--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -35,8 +35,22 @@
       .top
       .center
         %h3
-          Splat
+          Contact Details
         .graphic.pull-right
           %img{:src => "images/splat_logo.png"}
-        %p A Ruby gem initiated and developed by Josh Software for SMS platform. It acts as a platform for different SMS service providers so that the user/developers don’t need to worry about different type of formats. In the recently concluded LSRC 2010 the director Mr. Gautam Rege presented and got a wonderful response.
-
+        %p{:class => 'align-left'} 
+          %strong Postal Address
+          %br
+          6, Thube Park, Shivajinagar, Pune - 411005, Maharastra, India
+        %p 
+          %strong Phone
+          %br
+          +91-20-25539995
+        %p
+          %strong Follow us
+          %br
+          %a{:href => 'http://twitter.com/joshsoftware', :target => '_blank'} @joshsoftware
+        %p
+          %a{:href => 'mailto:info@joshsoftware.com'}Email us
+          or
+          %a{:href => '/contact_us'}Talk to us
