--- a/app/views/static/team.html.haml
+++ b/app/views/static/team.html.haml
@@ -5,7 +5,7 @@
         %li
           - classes = member[:id] == "gautam-rege" ? "first" : "" 
           %a.thumbnail{:data => {:member => "#{member[:id]}" }, :class => "#{classes}"}
-            %img{:src => "#{member[:image]}"}
+            %img{:src => "#{member[:image]}", :title => "Click to view #{member[:name]}'s detail", :alt => "#{member[:name]}"}
   .span6
     - @team_members.each do |member|
       - classes = member[:id] == "gautam-rege" ? "bio-#{member[:id]} first" : "bio-#{member[:id]} hide" 
@@ -16,7 +16,21 @@
           #{member[:title]}
         .separator
         .bio-text
-          %p #{member[:description]}
+          %p #{raw member[:description]}
+        .separator
+          - unless member[:technical].blank?
+            %p
+              - unless member[:technical][:twitter].blank?
+                <a target="_blank" href="http://twitter.com/#{member[:technical][:twitter].gsub("@","")}">#{member[:technical][:twitter]}</a> 
+                | 
+              - unless member[:technical][:blog].blank? 
+                <a target="_blank" href="#{member[:technical][:blog]}">Blog</a> 
+                | 
+              - unless member[:technical][:linkedin].blank?
+                <a target="_blank" href="#{member[:technical][:linkedin]}"> LinkedIn</a> 
+                | 
+              - unless member[:technical][:facebook].blank?
+                <a target="_blank" href="#{member[:technical][:facebook]}">Facebook</a>
 
 
 
