--- a/app/views/static/portfolio.html.haml
+++ b/app/views/static/portfolio.html.haml
@@ -9,7 +9,7 @@
               %li
                 %a{:href => "##{project[:id]}"} #{project[:title]}
           .top-link
-            %a{:href => "##{@projects[0][:id]}"} Top
+            %a{:href => "#header"} Top
         .bottom
   .span9
     - @projects.each do |project|
