--- a/app/views/static/contact_us.html.haml
+++ b/app/views/static/contact_us.html.haml
@@ -1,3 +1,5 @@
+- content_for :title do
+  Contact us | Josh Software Private Limited
 %form{:action => 'https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8', :method => 'POST', :id => 'contact_form', :class => 'form-horizontal well'}
   %input{:type => 'hidden', :name => 'oid', :value => '00D90000000I0gJ'}
   %input{:type => 'hidden', :name => 'retURL', :value => 'http://www.joshsoftware.com/ThankYou'}
