--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -42,15 +42,12 @@
           %strong Postal Address
           %br
           6, Thube Park, Shivajinagar, Pune - 411005, Maharastra, India
-        %p 
-          %strong Phone
-          %br
-          +91-20-25539995
         %p
-          %strong Follow us
-          %br
-          %a{:href => 'http://twitter.com/joshsoftware', :target => '_blank'} @joshsoftware
+          %li{:class => "icon-signal"} 
+          &nbsp;+91-20-25539995
         %p
-          %a{:href => 'mailto:info@joshsoftware.com'}Email us
+          %i{:class => "icon-envelope"}
+          %a{:href => 'mailto:info@joshsoftware.com'} Email us
           or
-          %a{:href => '/contact_us'}Talk to us
+          %i{:class => "icon-pencil"}
+          %a{:href => '/contact_us'} Send us a note
