--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -26,10 +26,9 @@
       .top
       .center
         %h3
-          E-Josh
-        .graphic.pull-right
-          %img{:src => "images/e-josh_logo.png"}
-        %p Developing a website and maintaining it has never been easy for any company, especially one which is not in the IT sector. Welcome to automated website management !
+          Fun @ JOSH
+        #fun
+          %img{:src => 'assets/loading.gif'}
   .span
     .well.well-home-callout
       .top
@@ -51,3 +50,8 @@
           or
           %i{:class => "icon-pencil"}
           %a{:href => '/contact_us'} Send us a note
+
+:javascript
+  $(document).ready(function(){
+    image_slide();
+  })
