--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -16,26 +16,12 @@
       .top
       .center
         %h3
-          Testimonials
-        #testimonyCarousel.carousel.slide
-          .carousel-inner
-            - isFirst = true
-            - @testimonies.each do |testimony|
-              - if isFirst
-                - isFirst = false
-                .item.active
-                  %p{:class => 'align-left'} 
-                    #{truncate(testimony[:endorsement],:length=>325)}
-                  %p.pull-right
-                    #{testimony[:endorser]}
-                    %br #{testimony[:title]}, #{testimony[:company]}
-              - else
-                .item
-                  %p{:class => 'align-left'} 
-                    #{truncate(testimony[:endorsement],:length=>325)}
-                  %p.pull-right
-                    #{testimony[:endorser]}
-                    %br #{testimony[:title]}, #{testimony[:company]}
+          %a{:href => 'testimonials', :title => 'Click to view all testimonials'} Testimonials
+        %p{:class => 'align-left'} 
+          #{truncate(@testimony[:endorsement],:length=>325)}
+        %p.pull-right{:class => 'align-left'} 
+          #{@testimony[:endorser]}
+          %br #{@testimony[:title]}, #{@testimony[:company]}
 
       
   .span
@@ -70,6 +56,18 @@
           or
           %i{:class => "icon-pencil"}
           %a{:href => '/contact_us'} Send us a note
+        //twitter
+        %a{:href => "https://twitter.com/joshsoftware", :target => "_blank", :title => 'Follow us @joshsoftware'}
+          %img{:src => 'assets/glyphicons_392_twitter.png'}
+        //facebook
+        %a{:href => "https://facebook.com/joshsoftware", :target => "_blank", :title => 'Visit our Facebook Page'}
+          %img{:src => 'assets/glyphicons_390_facebook.png'}
+        //blog subscripe
+        %a{:href => "http://blog.joshsoftware.com", :target => "_blank", :title => 'Subscribe to our blog'}
+          %img{:src => 'assets/glyphicons_397_rss.png'}
+        //linkedin
+        %a{:href => "http://www.linkedin.com/company/josh-software-private-limited", :target => "_blank", :title => 'Visit our LinkedIn Page'}
+          %img{:src => 'assets/glyphicons_377_linked_in.png'}
 
 :javascript
   $(document).ready(function(){
