--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
       = yield
       .clear-footer
     .footer
-      .pull-right
+      .pull-right.footer-social-links
         //twitter
         %a{:href => "https://twitter.com/joshsoftware", :target => "_blank", :title => 'Follow us @joshsoftware'}
           %img{:src => 'assets/glyphicons_392_twitter.png'}
