revert portfolio images css back to transparent

--- a/app/assets/stylesheets/josh.css.scss
+++ b/app/assets/stylesheets/josh.css.scss
@@ -247,14 +247,14 @@ $portfolio_menu_width: 195px;
     min-height: 240px;
     .screenshot {
       margin-right: 25px;
-      min-height: 265px;
-      margin-bottom: 0;
-      width: 340px;
-      background: url('portfolio-background.png') no-repeat;
-      padding: 13px 0 0 12px;
+      // min-height: 265px;
+      // margin-bottom: 0;
+      // width: 340px;
+      // background: url('portfolio-background.png') no-repeat;
+      // padding: 13px 0 0 12px;
     }
     .site-info {
-      margin-left: 350px;
+      // margin-left: 350px;
       .site-title {
         color:#a20f13;
         font-size: 1.15em;
