revert portfolio images css back to transparent

--- a/app/assets/stylesheets/josh.css.scss
+++ b/app/assets/stylesheets/josh.css.scss
@@ -254,7 +254,7 @@ $portfolio_menu_width: 195px;
       // padding: 13px 0 0 12px;
     }
     .site-info {
-      // margin-left: 350px;
+      margin-left: 350px;
       .site-title {
         color:#a20f13;
         font-size: 1.15em;
