--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -56,18 +56,19 @@
           or
           %i{:class => "icon-pencil"}
           %a{:href => '/contact_us'} Send us a note
-        //twitter
-        %a{:href => "https://twitter.com/joshsoftware", :target => "_blank", :title => 'Follow us @joshsoftware'}
-          %img{:src => 'assets/glyphicons_392_twitter.png'}
-        //facebook
-        %a{:href => "https://facebook.com/joshsoftware", :target => "_blank", :title => 'Visit our Facebook Page'}
-          %img{:src => 'assets/glyphicons_390_facebook.png'}
-        //blog subscripe
-        %a{:href => "http://blog.joshsoftware.com", :target => "_blank", :title => 'Subscribe to our blog'}
-          %img{:src => 'assets/glyphicons_397_rss.png'}
-        //linkedin
-        %a{:href => "http://www.linkedin.com/company/josh-software-private-limited", :target => "_blank", :title => 'Visit our LinkedIn Page'}
-          %img{:src => 'assets/glyphicons_377_linked_in.png'}
+        .social-links
+          //twitter
+          %a{:href => "https://twitter.com/joshsoftware", :target => "_blank", :title => 'Follow us @joshsoftware'}
+            %img{:src => 'assets/glyphicons_392_twitter.png'}
+          //facebook
+          %a{:href => "https://facebook.com/joshsoftware", :target => "_blank", :title => 'Visit our Facebook Page'}
+            %img{:src => 'assets/glyphicons_390_facebook.png'}
+          //blog subscripe
+          %a{:href => "http://blog.joshsoftware.com", :target => "_blank", :title => 'Subscribe to our blog'}
+            %img{:src => 'assets/glyphicons_397_rss.png'}
+          //linkedin
+          %a{:href => "http://www.linkedin.com/company/josh-software-private-limited", :target => "_blank", :title => 'Visit our LinkedIn Page'}
+            %img{:src => 'assets/glyphicons_377_linked_in.png'}
 
 :javascript
   $(document).ready(function(){
