--- a/app/views/static/team.html.haml
+++ b/app/views/static/team.html.haml
@@ -23,20 +23,22 @@
         .separator
         .bio-text
           %p #{raw member[:description]}
-        .separator
+        .separator.pull-right.footer-social-links
           - unless member[:technical].blank?
             %p
               - unless member[:technical][:twitter].blank?
-                <a target="_blank" href="http://twitter.com/#{member[:technical][:twitter].gsub("@","")}">#{member[:technical][:twitter]}</a> 
-                | 
+                %a{:target => "_blank", :href => "http://twitter.com/#{member[:technical][:twitter].gsub("@","")}"}
+                  %img{:src => 'assets/glyphicons_392_twitter_small.png', :title => "Follow #{member[:technical][:twitter]}"}
               - unless member[:technical][:blog].blank? 
-                <a target="_blank" href="#{member[:technical][:blog]}">Blog</a> 
-                | 
+                %a{:target => "_blank", :href => "#{member[:technical][:blog]}"}
+                  %img{:src => 'assets/glyphicons_397_rss_small.png', :title => "#{member[:name]}'s blog"}
               - unless member[:technical][:linkedin].blank?
-                <a target="_blank" href="#{member[:technical][:linkedin]}"> LinkedIn</a> 
-                | 
+                %a{:target => "_blank", :href => "#{member[:technical][:linkedin]}"}
+                  %img{:src => 'assets/glyphicons_377_linked_in_small.png', :title => "#{member[:name]}'s LinkedIn page" }
               - unless member[:technical][:facebook].blank?
-                <a target="_blank" href="#{member[:technical][:facebook]}">Facebook</a>
+                %a{:target => "_blank", :href => "#{member[:technical][:facebook]}"}
+                  %img{:src => 'assets/glyphicons_390_facebook_small.png', :title => "#{member[:name]}'s Facebook page" }
+
 
 
 
