Fixing the team page issue
- Firt member content gets disappeared, did a workaround set the opacity
to 1

--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -56,19 +56,20 @@
           or
           %i{:class => "icon-pencil"}
           %a{:href => '/contact_us'} Send us a note
-        .social-links
+        .social-links.pull-right
           //twitter
           %a{:href => "https://twitter.com/joshsoftware", :target => "_blank", :title => 'Follow us @joshsoftware'}
-            %img{:src => 'assets/glyphicons_392_twitter.png'}
+            %img{:src => 'assets/glyphicons_392_twitter_small.png'}
+
           //facebook
           %a{:href => "https://facebook.com/joshsoftware", :target => "_blank", :title => 'Visit our Facebook Page'}
-            %img{:src => 'assets/glyphicons_390_facebook.png'}
+            %img{:src => 'assets/glyphicons_390_facebook_small.png'}
           //blog subscripe
           %a{:href => "http://blog.joshsoftware.com", :target => "_blank", :title => 'Subscribe to our blog'}
-            %img{:src => 'assets/glyphicons_397_rss.png'}
+            %img{:src => 'assets/glyphicons_397_rss_small.png'}
           //linkedin
           %a{:href => "http://www.linkedin.com/company/josh-software-private-limited", :target => "_blank", :title => 'Visit our LinkedIn Page'}
-            %img{:src => 'assets/glyphicons_377_linked_in.png'}
+            %img{:src => 'assets/glyphicons_377_linked_in_small.png'}
 
 :javascript
   $(document).ready(function(){
