--- a/app/views/static/team.html.haml
+++ b/app/views/static/team.html.haml
@@ -23,7 +23,7 @@
         .separator
         .bio-text
           %p #{raw member[:description]}
-        .separator.pull-right.footer-social-links
+        .separator.pull-right.social-links
           - unless member[:technical].blank?
             %p
               - unless member[:technical][:twitter].blank?
